@@ -9,6 +9,7 @@ The items are sorted inversely, i.e. lastest items are on top
 --------------------------------------------------------------------------
 * remove ThreadLocal usage
 	THIS CHANGE IS NOT BACKWARDS COMPATIBLE, YOU MUST ADJUST YOUR CODE
+	- remove write[Head|Bar](PrintStream)
 	- remove default button for swapping positions
 		+ remove LiveServlet.getPreviousPositionButtonURL
 		+ remove LiveRequest/LiveFilter.edit(IntegerField, Item)
